--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="title">
   <h1>{{title}}</h1>
 </div>
-<app-image-list></app-image-list>
+<div>
+  <app-image-list></app-image-list>
+</div>
