--- a/src/app/image-list/image-list.component.html
+++ b/src/app/image-list/image-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let image of images | async" class="image">
+<div *ngFor="let image of images" class="image">
   <div class="image-text">{{image.name}}</div>
   <img [src]="image.url">
 </div>
